@@ -2,6 +2,7 @@
 Registered --fast-read-xml as a task instead of requiring --fast-read-xml-0.6 to be specified.
 Fixed the completeRelations option on the --bounding-box and --bounding-polygon tasks to work as expected and documented.
 Updated the --fast-read-xml task to ignore changeset elements.
+Fixed apidb tasks to correctly select the MySQL drivers instead of always using PostgreSQL drivers.
 
 0.34
 Fixed the --sort and --sort-change tasks to use 0.6 task implementations instead of the older 0.5 implementations.
